// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtSearchBar Snap should render AtSearchBar -- props actionName 1`] = `
<view
  class="at-search-bar"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-inputOGKOFBPM"
      maxlength="140"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -171px;"
  >
    actionName
  </view>
</view>
`;

exports[`AtSearchBar Snap should render AtSearchBar -- props class 1`] = `
<view
  class="test at-search-bar test"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-inputAEOIMBEL"
      maxlength="140"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap should render AtSearchBar -- props disabled 1`] = `
<view
  class="at-search-bar"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      disabled=""
      id="weui-inputOKJMEMPB"
      maxlength="140"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap should render AtSearchBar -- props fixed 1`] = `
<view
  class="at-search-bar at-search-bar--fixed"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-inputNFGFBMHG"
      maxlength="140"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap should render AtSearchBar -- props focus 1`] = `
<view
  class="at-search-bar"
  fucos="true"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-inputDONDDGIL"
      maxlength="140"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap should render AtSearchBar -- props inputType number 1`] = `
<view
  class="at-search-bar"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-inputPDFKCAKO"
      maxlength="140"
      type="number"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap should render AtSearchBar -- props maxLength 1`] = `
<view
  class="at-search-bar"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-inputFKEMJLOL"
      maxlength="120"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap should render AtSearchBar -- props placeholder 1`] = `
<view
  class="at-search-bar"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        placeholder
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-inputMDFFOJKC"
      maxlength="140"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap should render AtSearchBar -- props showActionButton 1`] = `
<view
  class="at-search-bar"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-inputELMGICCC"
      maxlength="140"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 1; margin-right: 0px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap should render AtSearchBar -- props style 1`] = `
<view
  class="at-search-bar"
  style="color: red;"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-inputIFJEJGNP"
      maxlength="140"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap should render AtSearchBar -- props value 1`] = `
<view
  class="at-search-bar"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 0;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: hidden;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-inputJBBMNEED"
      maxlength="140"
      type="text"
    />
    <view
      class="at-search-bar__clear"
      style="display: flex;"
    >
      <text
        class="at-icon at-icon-close-circle"
      />
    </view>
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 1; margin-right: 0px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar Snap should render initial AtSearchBar 1`] = `
<view
  class="at-search-bar"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-inputNFBLNJFB"
      maxlength="140"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;
